# smart-sensing

./: README.md  coap_client.code-workspace  esp32-based-implementations.code-workspace  example.properties  main.__  notes.txt  ontology.properties  paper-discussions.md  python-coap-client.py  python-coap-server.py
NRF52_XIAO_MTU_TEST/nRF52_XIAO_MTU_TEST_central/: nRF52_XIAO_MTU_TEST_central.ino
aamas23-paper/: paper-discussions.md
aamas23-paper/figures/: diagrams.drawio
bacnet4j-sandbox/: pom.xml
border-router/: notes,txt.txt
images/: debug-connection .jfif  the-mess-on-the-desk.jfif
java-coap-client/: pom.xml
mas-ontologies/: catalog-v001.xml
mas-simulation/: README.md
thingy-hardware/: compiler-summary.txt  ti_energy_calculator_extended.xlsx
thingy-hardware/thingy53-bdi-coap-client/: CMakeLists.txt  Makefile  prj.conf  prj_minimal.conf
thingy-hardware/thingy53-bdi-coap-client/src/: Role.cpp  Role.h  coap_client_utils.c  coap_client_utils.h  low_power.c  main.cpp  main.h  parse_xml.cpp  parse_xml.h  thread_helper.h
thingy-hardware/thingy53-bdi-coap-client/src/bdi-agent/: agentspeak.asl  functions.cpp
thingy-hardware/thingy53-bdi-coap-client/src/coap/: CoapClient.cpp  CoapClient.h
thingy-hardware/thingy53-bdi-coap-client/src/communication/: AbstractChannel.h  CoapChannel.cpp  CoapChannel.h
thingy-hardware/thingy53-bdi-coap-client/src/mas-abstractions/agent/: ReactiveAgent.cpp  ReactiveAgent.h
thingy-hardware/thingy53-bdi-coap-client/src/mas-abstractions/agent/bdi-agent/: functions.cpp
thingy-hardware/thingy53-bdi-coap-client/src/mas-abstractions/organization/: GroupRole.h  Organization.cpp  Organization.h
thingy-hardware/thingy53-bdi-coap-client/src/peripherals/: BME688.h  gpio.h
xiao-nrf52-low-energy-agent/: platformio.ini
(+537 files in other folders)
